# hydro-flow-vision-be

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  start.sh
api/: settings.py  urls.py
docs/: reactagent.md  uv.mdx
docs/old/: 1.md  resetforgot.md
management/: admin.py  models.py  serializers.py  urls.py  views.py
management/AI/: mainai.py  tools.py
management/AI/old/: mainai.py  react_workflow.py
management/management/commands/: customer_requests.py  specializations.py  water_guidelines.py
management/migrations/: 0001_initial.py  0002_initial.py  0002_waterguideline_description_waterguideline_status.py  0003_alter_waterreportattachment_water_report.py
new/: pyproject.toml
new/docs/: flow.md  uv.mdx
new/docs/old/: 3.md  4.md
new/management/: serializers.py
new/management/management/commands/: customer_requests.py  water_guidelines.py
new/management/migrations/: 0001_initial.py
old/: .gitignore  README.md  requirements.txt  start.sh
old/api/: settings.py
old/docs/: flow2.md  react.md
old/docs/old/: 2.md  ui.md
old/management/: info.json
old/management/AI/: test.md
old/management/AI/old/: react_workflow.py  tools.py
old/management/management/commands/: seed_all.py
old/management/management/pdfs/: gen.py
old/management/migrations/: 0002_initial.py
old/profiles/: admin.py  apps.py  serializers.py
old/profiles/migrations/: 0001_initial.py
old/profiles/services/: emails.py
profiles/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
profiles/management/commands/: users.py
profiles/migrations/: 0001_initial.py  0002_alter_user_gender_alter_user_role_alter_user_status.py
profiles/services/: new.md
profiles/tests_dir/: test_models.py
settings/: settings.py  urls.py
